crates/tribute-passes/src/native/snapshots/tribute_passes__native__rc_lowering__tests__snapshot_release.snap
---
source: crates/tribute-passes/src/native/rc_lowering.rs
assertion_line: 479
expression: result
---
core.module @test {
  clif.func {sym_name = @f, type = clif.func_sig<(core.ptr) -> core.nil>} {
    ^bb0(%0: core.ptr):
      %1 = clif.iconst {value = 0} : core.ptr
      %2 = clif.icmp %0, %1 {cond = "eq"} : core.i8
      clif.brif %2 [^bb3, ^bb1]

    ^bb1:
      %3 = clif.iconst {value = 8} : core.i64
      %4 = clif.isub %0, %3 : core.ptr
      %5 = clif.iconst {value = 1} : core.i32
      %6 = clif.atomic_rmw %4, %5 {offset = 0, op = "sub"} : core.i32
      %7 = clif.icmp %6, %5 {cond = "eq"} : core.i8
      clif.brif %7 [^bb2, ^bb3]

    ^bb2:
      %8 = clif.iconst {value = 12} : core.i64
      %9 = clif.call %0, %8 {callee = @__tribute_deep_release} : core.nil
      clif.jump [^bb3]

    ^bb3:
      clif.return
  }
}
